# grand-duc-proxy

./: .dockerignore  .env.backup  .env.docker  .gitignore  CONTEXT.md  Cargo.toml  README.md  docker-compose.prod.yml  docker-compose.yml  install.sh  main.py
.github/workflows/: docker-publish.yml  release.yml
SQL/: init.sql  migration_v10.sql  migration_v11.sql  migration_v12.sql  migration_v13.sql  migration_v14.sql  migration_v2.sql  migration_v3.sql  migration_v4.sql  migration_v5.sql  migration_v6.sql  migration_v7.sql  migration_v8.sql  migration_v9.sql
backend/: config.py  database.py  main.py  models.py  permissions.py  requirements.txt  security.py  start_server.cmd
backend/routers/: certificates.py  client_groups.py  integrations.py  killswitch.py  logs.py  proxy_control.py  roles.py  stats.py
docker/: backend.Dockerfile  db.Dockerfile  docker-init-db.sh  frontend.Dockerfile  nginx.conf  proxy.Dockerfile
frontend/: index.html  package-lock.json
frontend/src/: App.vue  main.js
frontend/src/api/: index.js
frontend/src/composables/: useTheme.js
frontend/src/router/: index.js
frontend/src/views/: About.vue  ClientGroups.vue  ClientUsers.vue  Documentation.vue  Integrations.vue  Killswitch.vue  Login.vue  Logs.vue  Roles.vue  Rules.vue  Settings.vue  TestAccess.vue  Users.vue
grand-duc-admin/backend/: config.py  database.py  main.py  models.py  permissions.py  requirements.txt  security.py  start_server.cmd
grand-duc-admin/backend/routers/: auth.py  certificates.py  client_groups.py  client_users.py  integrations.py  killswitch.py  logs.py  proxy_control.py  rules.py  settings.py  stats.py  tls_bypass.py  users.py
grand-duc-admin/backend/services/: email.py
grand-duc-admin/frontend/: index.html  package.json  vite.config.js
grand-duc-admin/frontend/src/: App.vue
grand-duc-admin/frontend/src/api/: index.js
grand-duc-admin/frontend/src/assets/: main.css
grand-duc-admin/frontend/src/router/: index.js
grand-duc-admin/frontend/src/stores/: auth.js
grand-duc-admin/frontend/src/views/: Certificates.vue  ClientGroups.vue  ClientUsers.vue  Dashboard.vue  Documentation.vue  Killswitch.vue  Login.vue  Logs.vue  ProxyLogs.vue  Roles.vue  Rules.vue  Settings.vue  TestAccess.vue  TlsBypass.vue  Users.vue
proxy/: Cargo.toml
proxy/src/: main.rs
src/: main.rs
templates/blocked/: index.html
